--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "phpunit/phpunit": "^10.1",
         "php-di/php-di": "^7.0",
         "mockery/mockery": "^1.5"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
